--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": " https://clarissei.github.io/cryptoapp",
   "name": "cryptoapp",
   "version": "0.1.0",
   "private": true,
@@ -50,6 +51,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "gh-pages": "^3.2.3",
     "source-map-loader": "^3.0.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
