--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,7 +53,6 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
-    "gh-pages": "^3.2.3",
     "source-map-loader": "^3.0.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
